--- a/.drone.yml
+++ b/.drone.yml
@@ -18,26 +18,29 @@ steps:
     commands:
       - cd TP2/AppliDocteur/src/applidocteur/
       - javac AppliDocteur.java
+    depends_on: [build-1]
 
 - name: build-3
     image: openjdk
     commands:
       - cd TP3/appUCA/src/appuca/
       - javac AppliDocteur.java
+    depends_on: [build-2]
 
 - name: build-4
     image: openjdk
     commands:
       - cd TP4/TextEditor/src/texteditor/
       - javac TextEditor.java
+    depends_on: [build-3]
 
 #  - name: code-analysis-1
 #    image: openjdk
 #    commands:
-#      - cd 
+#      - cd TP2/AppliDocteur/src/applidocteur/
 #    secrets: [ SECRET_SONAR_LOGIN ]
 #    settings:
 #      sonar_host: https://codefirst.iut.uca.fr/sonar/
 #      sonar_token:
 #        from_secret: SECRET_SONAR_LOGIN
-#      depends_on: [ build-1 ]
+#      depends_on: [build-1]
