--- a/.drone.yml
+++ b/.drone.yml
@@ -10,14 +10,14 @@ steps:
   - name: build-1
     image: openjdk
     commands:
-      - cd TP1/AppCollector/src/appcollector/
-      - javac AppCollector.java
+      - cd TP1/AppliDocteur/src/applidocteur/
+      - javac AppliDocteur.java
 
 #  - name: build-2
 #    image: openjdk
 #    commands:
-#      - cd TP2/AppliDocteur/src/applidocteur/
-#      - javac AppliDocteur.java
+#      - cd TP2/AppCollector/src/appcollector/
+#      - javac AppCollector.java
 #
 #  - name: build-3
 #    image: openjdk
