--- a/.drone.yml
+++ b/.drone.yml
@@ -38,4 +38,5 @@ steps:
       sonar_host: https://codefirst.iut.uca.fr/sonar/
       sonar_token:
         from_secret: SECRET_SONAR_LOGIN
+      java_binaries: target/classes
       depends_on: [build-1]
