--- a/.drone.yml
+++ b/.drone.yml
@@ -38,7 +38,8 @@ steps:
       sonar_host: https://codefirst.iut.uca.fr/sonar/
       sonar_token:
         from_secret: SECRET_SONAR_LOGIN
-      java_binaries: target/classes
       level: DEBUG
-      sources: .
+      showProfiling: true
+      sources: ./TP1/
+      usingProperties: false
       depends_on: [build-1]
