--- a/.drone.yml
+++ b/.drone.yml
@@ -39,8 +39,7 @@ steps:
       sonar_token:
         from_secret: SECRET_SONAR_LOGIN
       java_binaries: target/classes
-      inclusions: **/*.java
       level: DEBUG
       showProfiling: true
-      sources: ./TP1/
+      sources: ./TP1/AppliDocteur/src/applidocteur/
       depends_on: [build-1]
